# dotfiles

./: .envrc  .gitignore  .gitmodules  flake.nix  onboard.nix  onboard.sh  readme.md  result  secrets_epic.md
common/: config.nix  flake.nix  options.nix
common/_containers/: affine.nix  forgejo.nix  librechat.nix  mathesar.nix  obsidian_sync.md  obsidian_sync.nix  pgadmin.nix  template_postgres_app.nix
common/_home_manager/: default.nix
common/boot/: default.nix  grub.nix  systemd.nix
common/desktop_environment/: default.nix
common/general/: default.nix  fonts.nix  reporting.nix  tty_caps_esc.nix
common/home_manager/: default.nix
common/programs/: default.nix  docker.nix  flatpaks.nix  incus.nix  opencode.nix  podman.nix  qFlipper.nix  rustDev.nix  ssh.nix  tailnet.nix  uhkAgent.nix  virt-manager.nix
common/secrets/: default.nix
common/users/: default.nix  user.nix  users.nix
components/containers/: affine.nix  inventory.nix  librechat.nix  pgadmin.nix  tests.nix
components/hm/: alacritty.nix  atuin.nix  direnv.nix  git.nix  kitty.nix  ssh.nix  zsh.nix
components/nix/: qdirstat.nix  qflipper.nix  rust-dev.nix  rust-repl.nix  tailscale.nix
configs/h002/: configuration.nix
configs/lio/: hardware-configuration.nix
configs/oren/: configuration.nix
dummy/: flake.nix
flakes/: update-all.sh
flakes/beszel/: flake.nix
flakes/common/: flake.nix  readme.md  utils.nix
flakes/containers/: README.md  flake.nix
flakes/de_plasma/: de_plasma.nix  flake.nix
flakes/flatpaks/: flake.nix
flakes/hyprland/: default.nix  flake.nix  hyprland.nix
flakes/impermanence/: bcachefs-impermanence.nix  disko-bcachefs.nix  flake.nix  impermanence-tools.sh
flakes/opencode/: flake.nix
flakes/ports/: flake.nix  go.mod  main.go
flakes/secrets/: flake.nix  github_read_token.age  headscale_auth.age  linode_rw_domains.age  nix2bitbucket.age  (+23 more)
flakes/secrets-bao/: flake.nix  nixos-configchanges.nix  nixos-module.nix  readme.md
flakes/stt_ime/fcitx5-stt/: CMakeLists.txt
flakes/stt_ime/fcitx5-stt/data/: stt-inputmethod.conf  stt.conf
flakes/stt_ime/fcitx5-stt/src/: config.h.in  stt.cpp
flakes/stt_ime/stt-stream/: Cargo.toml
flakes/stt_ime/stt-stream/src/: main.rs  postprocess.rs
hosts/: README.md  configuration.nix  fleet.nix  ragenix.nix  template.josh.nix  template.luser.nix  template.nix
hosts_old/: configuration.nix
ideas/: h002_erasure.md  impermanence_everywhere.md  migrating_services.md  nebula_migration.md  nix-arr-declarative.md  openbao_declarative.md  openbao_secrets_migration.md  resilience.md  service_backups.md
modules/: audio_pulse.nix  de_cosmic.nix  de_gnome_wayland.nix  de_gnome_xorg.nix  docker.nix  fonts.nix  home_manager.nix  nebula.nix  neovim.nix  saber.nix  stormd.nix  validations.nix
modules_old/: _template.nix  audio.nix  rustdesk.nix  ssh.nix  stormd.nix  tty_caps_esc.nix
publics/: nix2git.pub
scripts/: probe-azure-models.sh  probe-copilot-models.sh
secrets/: github_read_token.age  nix2bitbucket.age  nix2github.age  nix2gitjosh.age  nix2gpdPocket3.age  nix2h001.age  nix2h002.age  nix2joe.age  nix2l001.age  nix2l002.age  nix2lio.age  nix2t.age  secrets.nix  test1.age
utilities/: impermanence.md
(+578 files in other folders)
