[package]
name = "stt-stream"
version = "0.1.0"
edition = "2021"
description = "Local speech-to-text streaming CLI for Fcitx5 integration"
license = "MIT"

[dependencies]
# Audio capture
cpal = "0.15"
# Resampling (48k -> 16k)
rubato = "0.15"
# Whisper inference (with built-in Silero VAD support)
whisper-rs = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization for IPC protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For downloading models
hf-hub = "0.4"

[features]
default = []
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
metal = ["whisper-rs/metal"]

[profile.release]
lto = true
codegen-units = 1
